# ALGA

./: CMakeLists.txt  Dockerfile  README.md
include/: Global.h  Params.h
include/AlignmentControllers/: AlignmentController.h  AlignmentControllerHybrid.h  AlignmentControllerLCS.h  AlignmentControllerLowErrorRate.h
include/ContigCreators/: ContigCorrector.h  ContigCreator.h  ContigCreatorSinglePath.h
include/Corrector/: ReadCorrector.h
include/DataStructures/: Bitset.h  Contig.h  FAU.h  Graph.h  Kmer.h  KmerGCPS.h  Read.h
include/GraphCreators/: GraphCreator.h  GraphCreatorKmerBased.h  GraphCreatorLI.h  GraphCreatorPairwiseKmerBranch.h  GraphCreatorPrefSuf.h
include/GraphSimplifiers/: GraphSimplifier.h
include/IO/: InputReader.h  OutputWriterNew.h  ReadPreprocess.h
include/StatisticsGenerators/: GenomeStatisticsCollector.h  StatisticsGenerator.h  StatisticsGeneratorBigData.h
include/Utils/: GraphVisualizer.h  MyUtils.h  TimeMeasurer.h  WorkloadManager.h
src/: Global.cpp  Params.cpp  main.cpp
src/AlignmentControllers/: AlignmentController.cpp  AlignmentControllerHybrid.cpp  AlignmentControllerLCS.cpp  AlignmentControllerLowErrorRate.cpp
src/ContigCreators/: ContigCreator.cpp  ContigCreatorSinglePath.cpp
src/Corrector/: ReadCorrector.cpp
src/DataStructures/: Bitset.cpp  Contig.cpp  Graph.cpp  Kmer.cpp  KmerGCPS.cpp  Read.cpp
src/GraphCreators/: GraphCreator.cpp  GraphCreatorKmerBased.cpp  GraphCreatorLI.cpp  GraphCreatorPairwiseKmerBranch.cpp  GraphCreatorPrefSuf.cpp
src/GraphSimplifiers/: GraphSimplifier.cpp
src/IO/: InputReader.cpp  OutputWriterNew.cpp  ReadPreprocess.cpp
src/StatisticsGenerators/: GenomeStatisticsCollector.cpp  StatisticsGenerator.cpp  StatisticsGeneratorBigData.cpp
src/Utils/: GraphVisualizer.cpp  MyUtils.cpp  TimeMeasurer.cpp  WorkloadManager.cpp
